Hay que mandarle mecha, pastafrola
Co-authored-by: nicoelcapo98 <nicoelcapo98@users.noreply.github.com>

--- a/biblio.bib
+++ b/biblio.bib
@@ -16,6 +16,23 @@
   edition   = {1}
 }
 
+@book{hart_espanol,
+   title =     {Electrónica De Potencia},
+   author =    {Daniel W. Hart},
+   publisher = {PEARSON EDUCACION},
+   isbn =      {9788420531793},
+   year =      {2001}
+}
+
+@book{rashid,
+   title =     {Power electronics: devices, circuits and applications},
+   author =    {Rashid, Muhammad Harunur},
+   publisher = {Pearson},
+   isbn =      {0273769081},
+   year =      {2014},
+   edition =   {4th ed}
+}
+
 @book{pressman,
   title     = {Switching Power Supply Design},
   author    = {Abraham Pressman and Keith Billings and Taylor Morey},
