--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -13,3 +13,7 @@ Ejemplos: resistencia del inductor del filtro de salida, pérdidas en los MOSFET
 Se evidencia como ante el aumento de la corriente de carga la tensión de salida obtenida disminuye y se aleja del comportamiento semi-ideal del simulador. 
 Como las pérdidas en todos los componentes aumentan con la corriente de carga. 
 Es por ello que en la práctica los convertidores funcionan a lazo cerrado sensando la tensión o corriente de salida, y por medio de un sistema de realimentación ajustan el ciclo de trabajo para obtener una tensión de salida constante ante los cambios de carga o la tensión de entrada del convertidor.
+
+% Completar
+
+Quedó pendiente por implementar el rectificador a la entrada del conversor y el circuito de control.
