--- a/sections/images_sim.tex
+++ b/sections/images_sim.tex
@@ -85,8 +85,15 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{images/sim/14.pdf}
-    \caption{Corriente por la carga y su ripple}
+    \caption{Corriente por la carga}
     \label{fig:sim:14}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=\textwidth]{images/sim/14-ripple.pdf}
+    \caption{Ripple de corriente por la carga}
+    \label{fig:sim:14ripple}
 \end{figure}
 
 \begin{figure}[ht]
@@ -134,8 +141,15 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{images/sim/21.pdf}
-    \caption{Tensión en la carga y su ripple}
+    \caption{Tensión en la carga}
     \label{fig:sim:21}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=\textwidth]{images/sim/21-ripple.pdf}
+    \caption{Ripple de tensión en la carga}
+    \label{fig:sim:21ripple}
 \end{figure}
 
 \begin{figure}[ht]
