--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -2,8 +2,22 @@
 
 % Objetivos específicos. Contenido de los capítulos o secciones 
 % Finaliza con un párrafo que resuma el contenido del informe
+
+% En las siguientes secciones se detallarán cada una de estas etapas,
+% enumerando los problemas encontrados y las soluciones propuestas.
+
+% Marco teórico
+% En esta sección se presenta el desarrollo llevado a cabo para lograr los objetivos propuestos, haciendo énfasis en los aspectos teóricos que fundamentan el proyecto.
+
+% PCB
+% A continuación se detallan todos los criterios aplicados para la inclusión de cada componente en el circuito impreso en base a las recomendaciones 
+% proporcionadas por la cátedra, los integrantes del ATEI y las especificadas en las hojas de datos de los circuitos integrados.
+
+% Simulaciones del prototipo
+% En esta sección se comparan las formas de onda obtenidas con el circuito una vez implementado, con las simulaciones realizadas para el prototipo.
+
 El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo,
-complementando los proyectos realizados por los alumnos de la cátedra Proyecto Final durante el año 2021.
+complementando los proyectos realizados por los alumnos de la cátedra de Proyecto Final durante el año 2021.
 
 El uso de las baterías de litio está en constante crecimiento y,
 debido a que es un material altamente reactivo,
