--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -3,14 +3,12 @@
 % Contenido del informe, objetivos generales, motivación, resultados y conclusiones más importantes
 
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
-    describiendo las decisiones tomadas durante la etapa de diseño,
-    tanto los avances como los problemas enfrentados,
-    junto con las respectivas soluciones propuestas.
+    describiendo las decisiones tomadas durante la etapa de diseño, 
+    los problemas afrontados y las respectivas soluciones propuestas.
 
-    El cargador admite baterías baterias de litio con corrientes de carga que van desde 1A hasta 6.7A
-    y se puede utilizar con una fuente de alimentación de 110V o 220V.
-
-    Se utilizó una topología forward con doble switch para la etapa de conversión de CC a CC
-    y un circuito de amplificadores operacionales para la etapa de control.
+    El cargador está diseñado para ser utilizado con baterías de litio cuya corriente de carga varíe desde 1A hasta 6.7A.
+    La fuente de alimentación puede ser de 110V o 220VAC. 
+    Se utilizó una topología forward doble switch para la etapa de conversión DC-DC
+    y un circuito integrado para la etapa de control.
 
 \end{abstract}
