--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 \usepackage[letterpaper]{geometry}
 \usepackage{graphicx}
 \usepackage{pgfgantt}
@@ -12,6 +12,7 @@
 \usepackage{geometry}
 \usepackage{amsmath}
 \usepackage{svg}
+\usepackage{hyperref}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
